# fixerpy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/fixerpy/: __init__.py  cli.py  fixer.py
