[project]
name = "fixerpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Masaya Kataoka", email = "ms.kataoka@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "gitpython>=3.1.46",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
